[package]
name = "auto_impl"
version = "0.4.1"
authors = [
    "Ashley Mannix <ashleymannix@live.com.au>",
    "Lukas Kalbertodt <lukas.kalbertodt@gmail.com>",
]
license = "MIT/Apache-2.0"
description = "Automatically implement traits for common smart pointers and closures"
repository = "https://github.com/auto-impl-rs/auto_impl/"
documentation = "https://docs.rs/auto_impl/"
keywords = ["trait", "impl", "proc-macro", "closure"]
categories = ["development-tools", "rust-patterns"]
readme = "README.md"
autotests = true
edition = "2018"

[badges]
travis-ci = { repository = "auto-impl-rs/auto_impl" }


[lib]
proc-macro = true

[features]
nightly = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "visit", "visit-mut"] }
proc-macro-error = "1.0.0"

[dev-dependencies]
trybuild = "1"
rustversion = "1"
