[package]
name = "auto_impl"
version = "1.0.0"
authors = [
    "Ashley Mannix <ashleymannix@live.com.au>",
    "Lukas Kalbertodt <lukas.kalbertodt@gmail.com>",
]
license = "MIT/Apache-2.0"
description = "Automatically implement traits for common smart pointers and closures"
repository = "https://github.com/auto-impl-rs/auto_impl/"
documentation = "https://docs.rs/auto_impl/"
keywords = ["trait", "impl", "proc-macro", "closure"]
categories = ["development-tools", "rust-patterns"]
readme = "README.md"
autotests = true
edition = "2018"
rust-version = "1.37"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "visit", "visit-mut"] }
proc-macro-error = "1.0.0"

[dev-dependencies]
trybuild = "1"
async-trait = "0.1"
async-std = { version = "1", features = ["attributes"] }
