[package]
name = "auto_impl"
version = "1.3.0"
authors = [
    "Ashley Mannix <ashleymannix@live.com.au>",
    "Lukas Kalbertodt <lukas.kalbertodt@gmail.com>",
]
license = "MIT OR Apache-2.0"
description = "Automatically implement traits for common smart pointers and closures"
repository = "https://github.com/auto-impl-rs/auto_impl/"
documentation = "https://docs.rs/auto_impl/"
keywords = ["trait", "impl", "proc-macro", "closure"]
categories = ["development-tools", "rust-patterns"]
readme = "README.md"
autotests = true
edition = "2021"
rust-version = "1.56"

[workspace]
members = [
    "examples/async_await"
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit", "visit-mut"] }

[dev-dependencies]
trybuild = "1"
rustversion = "1"
